--- a/src/config/dynamic-theme-fixes.config
+++ b/src/config/dynamic-theme-fixes.config
@@ -3274,6 +3274,18 @@ CSS
 
 ================================
 
+feedly.com
+
+CSS
+.entry.u0:hover {
+    background-color: rgb(35, 35, 35) !important;
+}
+.entry--selected.u0, .entry--selected.u0:hover, button.secondary:hover {
+    background-color: rgb(50, 50, 50) !important;
+}
+
+================================
+
 feynmanlectures.caltech.edu
 
 INVERT
@@ -6257,16 +6269,6 @@ CSS
 .pds-background-cover video {
     filter: brightness(50%) sepia(40%) !important;
 }
-
-================================
-
-nos.nl
-
-INVERT
-.npo-button
-
-IGNORE IMAGE ANALYSIS
-.npo-button
 
 ================================
 
